--- a/HTML/actividadesCss/flex layout/style.css
+++ b/HTML/actividadesCss/flex layout/style.css
@@ -1,36 +1,52 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
+    margin: 0 0 0 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
   }
+  element.style {
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+}
   
   .header {
+    border: 2px solid black;
     font-size: 32px;
     font-weight: 900;
     height: 72px;
     background: darkmagenta;
     color: white;
-    text-align: center;
-    margin: 16px 0;
+    margin: 0 0 8px 0;
     line-height: 72px;
   }
   
   .footer {
-    height: 72px;
+    margin: 8px 0 0 0;
+    border: 2px solid black;
+    height: 100%;
     background: #eee;
     color: darkmagenta;
     align-items: center;
     justify-content: center;
     display:flex;
   }
+  .container {
+    height: 790px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
   
   .sidebar {
+    border: 2px solid black;
     width: 300px;
     background: royalblue;
-    padding: 16;
-    flex-grow: 1;
+    padding: 16px 0 16px 0;
+    height: 100%;
+    margin: 16px 0 16px 0;
   }
   .sidebar ul{
     list-style: none;
@@ -46,16 +62,18 @@ body {
   }
   
   .card-container{
+    width: 900px;
     display:flex;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 32px;
+    height: 80%;
   }
   .card {
-    border: 1px solid #eee;
+    border: 1px solid black;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 4px;
     padding: 16px;
     margin-bottom: 16px;
-    flex-basis: calc(33.33% - 16px);
+    flex-basis: calc(25% - 16px);
   }
