--- a/JAVASCRIPT/Primera pagina VITE/primerproyecto/style.css
+++ b/JAVASCRIPT/Primera pagina VITE/primerproyecto/style.css
@@ -1,97 +1,49 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+header{
+  height: 15vh;
+  width: 100vw;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: space-evenly;
+  font-family: 'Bebas Neue', sans-serif; 
+  box-shadow: 7px 10px 18px -8px rgba(255,59,59,0.37);
+  -moz-box-shadow: 7px 10px 18px -8px rgba(255,59,59,0.37);
+  box-shadow: 7px 10px 18px -8px rgba(255,59,59,0.37);
+  background: rgba(255,209,201,1);
+background: -moz-linear-gradient(left, rgba(255,209,201,1) 0%, rgba(231,56,39,1) 100%);
+background: -gradient(left top, right top, color-stop(0%, rgba(255,209,201,1)), color-stop(100%, rgba(231,56,39,1)));
+background: -webkit-linear-gradient(left, rgba(255,209,201,1) 0%, rgba(231,56,39,1) 100%);
+background: -o-linear-gradient(left, rgba(255,209,201,1) 0%, rgba(231,56,39,1) 100%);
+background: -ms-linear-gradient(left, rgba(255,209,201,1) 0%, rgba(231,56,39,1) 100%);
+background: linear-gradient(to right, rgba(255,209,201,1) 0%, rgba(231,56,39,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd1c9', endColorstr='#e73827', GradientType=1 );
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+footer{
+  width: 100vw;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Bebas Neue', sans-serif; 
+  box-shadow: 7px 10px 18px -8px rgba(255,59,59,0.37);
+  -moz-box-shadow: 7px 10px 18px -8px rgba(255,59,59,0.37);
+  box-shadow: 7px 10px 18px -8px rgba(255,59,59,0.37);
+  background: rgba(255,209,201,1);
+  background: -moz-linear-gradient(left, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(255,166,150,1) 100%);
+background: -gradient(left top, right top, color-stop(0%, rgba(241,111,92,1)), color-stop(0%, rgba(246,41,12,1)), color-stop(0%, rgba(240,47,23,1)), color-stop(100%, rgba(255,166,150,1)));
+background: -webkit-linear-gradient(left, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(255,166,150,1) 100%);
+background: -o-linear-gradient(left, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(255,166,150,1) 100%);
+background: -ms-linear-gradient(left, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(255,166,150,1) 100%);
+background: linear-gradient(to right, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(255,166,150,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f16f5c', endColorstr='#ffa696', GradientType=1 );
 }
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+main{
+  width: 100vw;
+  min-height: 75vh;
+  padding: 3rem 0 3rem 0;
+  
 }
