--- a/JAVASCRIPT/proyecto quiz/proyecto-quiz/style.css
+++ b/JAVASCRIPT/proyecto quiz/proyecto-quiz/style.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 #app {
+  width: 100vw;
+  height: 100vh;
   display:flex;
   align-items: center;
   flex-direction: column;
@@ -22,9 +24,15 @@
 #respuestas{
   display: flex;
   flex-direction: column;
+  width: 100%;
   gap:10px;
   margin: 5px;
 }
 button{
   background-color: rgb(112, 241, 123);
+  width: 100%;
+}
+button:hover{
+  background: orange;
+  transition: 0.3s;
 }
