--- a/JAVASCRIPT/Ejemplo proyecto final performance/components/Footer/Footer.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/components/Footer/Footer.css
@@ -3,16 +3,17 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #0d0d0d;
+  background-color: rgb(255, 255, 255);
+  /* background: #0d0d0d;
   -webkit-box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
   -moz-box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
-  box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
+  box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61); */
   position: fixed;
   bottom: 0;
   width: 100%;
   z-index: 100;
-  color: #0def03;
+  color: #01bdbd;
   & span {
-    color: white;
+    color: rgb(0, 0, 0);
   }
 }
