--- a/JAVASCRIPT/Ejemplo proyecto final performance/style.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/style.css
@@ -2,7 +2,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Raleway', sans-serif;
+  
 
   & main {
     padding-top: 20vh;
@@ -11,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    
   }
 
   & #app {
@@ -18,5 +20,6 @@
   }
   & body {
     transition: ease-in-out 0.2s;
+    
   }
 }
