--- a/JAVASCRIPT/Ejemplo proyecto final performance/pages/Quiz/Quiz.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/pages/Quiz/Quiz.css
@@ -29,10 +29,54 @@
     margin: 5px;
   }
   button{
-    background-color: rgb(112, 241, 123);
+    background-color: rgb(255, 255, 255);
     width: 100%;
+    height: 30px;
   }
   button:hover{
     background: orange;
     transition: 0.3s;
+  }
+  .navigationButton{
+    border-radius: 30%;
+    width: 80px;
+    background-color: rgb(167, 158, 158);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    margin-top: 10px;
+  }
+  #previous{
+    background-color: rgb(0, 0, 0);
+    color: white;
+  }
+  #next{
+    background-color:  rgb(255, 255, 255);
+  }
+  #solution{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  #Quiz{
+    display: block;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-width: 50px;
+    width: 600px;
+    height: 400px
+    ;
+  }
+  #question{
+    height: 68px;
+    width: 587px;
+    max-height: 500px;
+    font-size: large;
+    /* padding-bottom: 30px; */
+    display: block;
+    justify-content: center;
+    text-align: center;
   }
