--- a/JAVASCRIPT/Ejemplo proyecto final performance/style.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/style.css
@@ -6,9 +6,9 @@
   
 
   & main {
-    padding-top: 20vh;
-    min-height: 90vh;
-    padding-bottom: 10vh;
+    /* padding-top: 20vh; */
+    min-height: 60vh;
+    padding-bottom: 5vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,6 +17,10 @@
 
   & #app {
     min-height: 100vh;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
   }
   & body {
     transition: ease-in-out 0.2s;
