--- a/JAVASCRIPT/Ejemplo proyecto final performance/pages/Login/Login.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/pages/Login/Login.css
@@ -24,7 +24,7 @@
     width: 300px;
     height: 43px;
     margin: 20px;
-    background-image: url(https://res.cloudinary.com/dqlvldxwc/image/upload/v1697394995/start_1_yrkodo.png);
+    background-image: url(https://res.cloudinary.com/dqlvldxwc/image/upload/v1697482404/Sin_t%C3%ADtulo_2000_x_803_px_300_x_43_px_yilr2x.png);
     background-color: #ffffff;
     border: none;
     border-radius: 25px;
