--- a/JAVASCRIPT/Ejemplo proyecto final performance/pages/Dashboard/Dashboard.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/pages/Dashboard/Dashboard.css
@@ -21,13 +21,13 @@
       height: 350px;
       border-radius: 50%;
       background-color: black;
-      color: white;
+      color: rgb(255, 255, 255);
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       margin: 0.5rem;
-      background: #0d0d0d;
+      background: #ffffff;
       -webkit-box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
       -moz-box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
       box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
@@ -40,7 +40,7 @@
         transform: scale(0.98);
       }
       & img {
-        width: 60%;
+        width: 80%;
       }
     }
   }
