--- a/JAVASCRIPT/Ejemplo proyecto final performance/pages/Pokemon/Pokemon.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/pages/Pokemon/Pokemon.css
@@ -1,9 +1,15 @@
+#pokemon{
+  min-height: 50vh;
+}
+
+
 #galleryPokemon {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   gap: 2rem;
+  height: 200px;
 }
 
 #containerFilter {
