--- a/JAVASCRIPT/Ejemplo proyecto final performance/style.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/style.css
@@ -6,13 +6,13 @@
   
 
   & main {
-    /* padding-top: 20vh; */
-    min-height: 60vh;
+    /* padding-top: 20vh;  */
+    min-height: 50vh;
     padding-bottom: 5vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    height: 68vh;
   }
 
   & #app {
