--- a/JAVASCRIPT/Ejemplo proyecto final performance/pages/Quiz/Quiz.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/pages/Quiz/Quiz.css
@@ -3,31 +3,30 @@
     padding: 0;
     box-sizing: border-box;
   }
-  #app {
-    width: 100vw;
-    height: 100vh;
-    display:flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    gap: 1rem;
-    padding: 1rem;
-  }
-  .block {
-    background-color: #242424;
-    color: rgb(255, 255, 255);
-    padding: 1rem;
-    width: 100%;
-    text-align: center;
-    margin: 0 0 10px 0;
-  }
-  #respuestas{
+  #Enhorabuena{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    gap:10px;
-    margin: 5px;
+    gap: 5px;
   }
+
+  .containerQuiz{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+  }
+
+  .navBotones{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 800px;
+    align-items: center;
+    align-content: space-between;
+  }
+
   button{
     background-color: rgb(255, 255, 255);
     width: 100%;
@@ -42,10 +41,10 @@
     width: 80px;
     background-color: rgb(167, 158, 158);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    justify-content:center;
-    margin-top: 10px;
+    justify-content:center; 
+    margin-top: 35px;
   }
   .score{
     justify-content: right;
@@ -56,11 +55,17 @@
   }
 
   #previous{
+    display: flex;
     background-color: rgb(0, 0, 0);
     color: white;
+    align-self: flex-start;
+    position: fixed;
   }
   #next{
+    display: flex;
     background-color:  rgb(255, 255, 255);
+    align-self: flex-end;
+    position: fixed;
   }
   #solution{
     justify-content: center;
@@ -72,19 +77,10 @@
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    min-width: 50px;
-    width: 600px;
-    height: 400px
+    font-size: small;
+    min-width: 200px;
+    max-width: 600px;
+    height: 300px;
+    gap:4px;
+  }
     ;
-  }
-  #question{
-    height: 68px;
-    width: 587px;
-    max-height: 500px;
-    font-size: large;
-    /* padding-bottom: 30px; */
-    display: block;
-    justify-content: center;
-    text-align: center;
-  }
