--- a/JAVASCRIPT/Ejemplo proyecto final performance/style.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/style.css
@@ -7,12 +7,15 @@
 
   & main {
     /* padding-top: 20vh;  */
-    min-height: 50vh;
-    padding-bottom: 5vh;
+    min-height: 67vh;
+    max-width: 60vw;
+    /* padding-bottom: 5vh; */
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 68vh;
+    @media (max-width: 600px) {
+      flex-direction: column;
+    } 
   }
 
   & #app {
