--- a/JAVASCRIPT/Ejemplo proyecto final performance/components/Footer/Footer.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/components/Footer/Footer.css
@@ -3,13 +3,10 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  -webkit-box-shadow: 0px 5px 37px -9px rgba(47,209,250,1);
+-moz-box-shadow: 0px 5px 37px -9px rgba(47,209,250,1);
+box-shadow: 0px 5px 37px -9px rgba(47,209,250,1);
   background-color: rgb(255, 255, 255);
-  /* background: #0d0d0d;
-  -webkit-box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
-  -moz-box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
-  box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61); */
-  /* position: fixed; */
   bottom: 0;
   width: 100%;
   z-index: 100;
