--- a/JAVASCRIPT/Ejemplo proyecto final performance/components/Header/Header.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/components/Header/Header.css
@@ -3,6 +3,9 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  -webkit-box-shadow: 18px 25px 37px -7px rgba(255,183,0,0.3);
+  -moz-box-shadow: 18px 25px 37px -7px rgba(255,183,0,0.3);
+  box-shadow: 18px 25px 37px -7px rgba(255,183,0,0.3);
   /* position: fixed; */
   width: 100%;
   @media (max-width: 600px) {
