--- a/JAVASCRIPT/Ejemplo proyecto final performance/pages/Dashboard/Dashboard.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/pages/Dashboard/Dashboard.css
@@ -28,9 +28,10 @@
       align-items: center;
       margin: 0.5rem;
       background: #ffffff;
-      -webkit-box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
-      -moz-box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
-      box-shadow: 0px 8px 30px -3px rgba(0, 0, 0, 0.61);
+      border-radius: 75px 75px 75px 75px;
+      -moz-border-radius: 75px 75px 75px 75px;
+      -webkit-border-radius: 75px 75px 75px 75px;
+      border: 8px solid #e8e8e8;
       transition: ease-in-out 0.1s;
       &:hover {
         -webkit-box-shadow: 0px 8px 10px -3px rgba(0, 0, 0, 0.61);
