--- a/JAVASCRIPT/Ejemplo proyecto final performance/pages/Topo/Topo.css
+++ b/JAVASCRIPT/Ejemplo proyecto final performance/pages/Topo/Topo.css
@@ -26,7 +26,7 @@
 	text-align: center;
 }
 .mole{
-	background-image: url("https://res.cloudinary.com/dqlvldxwc/image/upload/v1697453608/topo_jtcy3h.png");
+	background-image: url("https://res.cloudinary.com/dqlvldxwc/image/upload/v1697554995/WhatsApp_Image_2023-10-17_at_16.58.23_ffymch.jpg");
 }
 
 .components{
