--- a/JAVASCRIPT/Proyecto final/style.css
+++ b/JAVASCRIPT/Proyecto final/style.css
@@ -7,7 +7,7 @@
 
   & main {
     min-height: 68vh;
-    max-width: 60vw;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
